# UI-demo

./: .gitignore  .replit  config_manager.py  database.py  main.py  pyproject.toml  test_data.sql
attached_assets/: Pasted-Build-a-Role-Based-Internet-Desktop-App-with-Central-MySQL-DB-Project-Description-Develop-an-in-1752695755780_1752695755781.txt
